--- a/p_2/styles/main.css
+++ b/p_2/styles/main.css
@@ -5,10 +5,19 @@
 
 .menu-object{
 	display: grid;
-    grid-template-columns: 2fr 1fr 1fr;
-    grid-gap: 20px;
-    gap: 20px
+    grid-template-columns: auto;
+	justify-content: center;
+	background-color: sandybrown;
+	width: 17%;
+	margin: 0 auto;
+	margin-bottom: 30px;
+
 }
+
+body{
+	background-color: papayawhip;
+}
+
 
 p{
 	text-align: center;
@@ -21,7 +30,7 @@ button.menu-object:active{
 }
 
 button.menu-object:hover:not(:active){
-	font-size: 22px;
+	font-size: 14px;
 	width: 325px;
 	height: 85px;
 }
@@ -31,10 +40,13 @@ h2{
 	text-align: center;
 	width: 40em;
 	height: 2em;
+	border-style: solid;
 	padding:5px;
-	background-color: floralwhite;
+	background-color: darkred;
 	display: inline-block;
-	color:darkorchid;
+	color:black;
+	justify-content: center;
+	margin-left: 460px;
 	
 
 
@@ -43,7 +55,13 @@ h2{
 
 #fondo{
 
-   background-color:darkorchid;
+	background-color: papayawhip;
 
 
+}
+
+img{
+
+	display: inline;
+	margin: auto;
 }
