--- a/p_2/styles/main.css
+++ b/p_2/styles/main.css
@@ -60,8 +60,9 @@ h2{
 
 }
 
-img{
+#imatges-joc{
 
-	display: inline;
-	margin: auto;
+	margin-left: 750px;
+	margin-bottom: 60px;
+	margin-top: 60px;
 }
