--- a/pi_3/styles/main.css
+++ b/pi_3/styles/main.css
@@ -9,6 +9,11 @@ input[type=number]{
 #title{
 	font-size: 26px;
 	line-height: 75px;
+	color: blueviolet;
+	background-color: azure;
+}
+.colorFons{
+	background-color: azure;
 }
 
 .menu-object{
@@ -19,21 +24,27 @@ input[type=number]{
 	height: 75px;
 	font-size: 16px;
 	margin-top: 10px;
+	color: blueviolet;
+	background-color: floralwhite;
 }
 
 p{
 	text-align: center;
 }
 
+
 button.menu-object:active{
 	font-size: 18px;
 	width: 275px;
 	height: 70px;
+	background-color: black;
+	color: aliceblue;
 }
 
 button.menu-object:hover:not(:active){
 	font-size: 22px;
 	width: 325px;
 	height: 85px;
+	background-color: lightblue;
 }
 
